--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
       "semi": ["error", "always"],
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/prop-types": "off",
-      "react/react-in-jsx-scope": "off"
+      "react/react-in-jsx-scope": "off",
+      "react/no-array-index-key":"off"
       // "dot-notation":"off"
     }
   }
